Refactor code structure for improved readability and maintainability

--- a/notebooks/01_premier_backtest.ipynb
+++ b/notebooks/01_premier_backtest.ipynb
@@ -51,6 +51,7 @@
     "from nautilus_trader.backtest.node import BacktestNode, BacktestRunConfig, BacktestVenueConfig, BacktestDataConfig, BacktestEngineConfig\n",
     "from nautilus_trader.config import ImportableStrategyConfig, LoggingConfig\n",
     "from nautilus_trader.core.datetime import dt_to_unix_nanos\n",
+    "from nautilus_trader.model.currencies import USD\n",
     "from nautilus_trader.model.data import Bar, BarType\n",
     "from nautilus_trader.model.identifiers import InstrumentId, Symbol, Venue\n",
     "from nautilus_trader.model.instruments import Equity\n",
@@ -137,42 +138,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2022-01-03</th>\n",
-       "      <td>178.443115</td>\n",
-       "      <td>179.296076</td>\n",
-       "      <td>174.227395</td>\n",
-       "      <td>174.345039</td>\n",
+       "      <td>178.443130</td>\n",
+       "      <td>179.296091</td>\n",
+       "      <td>174.227410</td>\n",
+       "      <td>174.345053</td>\n",
        "      <td>104487900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-01-04</th>\n",
-       "      <td>176.178406</td>\n",
-       "      <td>179.354917</td>\n",
-       "      <td>175.609770</td>\n",
-       "      <td>179.050994</td>\n",
+       "      <td>176.178436</td>\n",
+       "      <td>179.354948</td>\n",
+       "      <td>175.609801</td>\n",
+       "      <td>179.051025</td>\n",
        "      <td>99310400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-01-05</th>\n",
-       "      <td>171.492065</td>\n",
-       "      <td>176.639180</td>\n",
-       "      <td>171.217554</td>\n",
-       "      <td>176.090157</td>\n",
+       "      <td>171.492096</td>\n",
+       "      <td>176.639212</td>\n",
+       "      <td>171.217584</td>\n",
+       "      <td>176.090189</td>\n",
        "      <td>94537600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-01-06</th>\n",
-       "      <td>168.629303</td>\n",
-       "      <td>171.864636</td>\n",
-       "      <td>168.276357</td>\n",
-       "      <td>169.315582</td>\n",
+       "      <td>168.629288</td>\n",
+       "      <td>171.864620</td>\n",
+       "      <td>168.276342</td>\n",
+       "      <td>169.315567</td>\n",
        "      <td>96904000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-01-07</th>\n",
-       "      <td>168.795929</td>\n",
-       "      <td>170.727323</td>\n",
-       "      <td>167.678270</td>\n",
-       "      <td>169.501820</td>\n",
+       "      <td>168.795959</td>\n",
+       "      <td>170.727354</td>\n",
+       "      <td>167.678301</td>\n",
+       "      <td>169.501851</td>\n",
        "      <td>86709100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -183,11 +184,11 @@
        "Price            Close        High         Low        Open     Volume\n",
        "Ticker            AAPL        AAPL        AAPL        AAPL       AAPL\n",
        "Date                                                                 \n",
-       "2022-01-03  178.443115  179.296076  174.227395  174.345039  104487900\n",
-       "2022-01-04  176.178406  179.354917  175.609770  179.050994   99310400\n",
-       "2022-01-05  171.492065  176.639180  171.217554  176.090157   94537600\n",
-       "2022-01-06  168.629303  171.864636  168.276357  169.315582   96904000\n",
-       "2022-01-07  168.795929  170.727323  167.678270  169.501820   86709100"
+       "2022-01-03  178.443130  179.296091  174.227410  174.345053  104487900\n",
+       "2022-01-04  176.178436  179.354948  175.609801  179.051025   99310400\n",
+       "2022-01-05  171.492096  176.639212  171.217584  176.090189   94537600\n",
+       "2022-01-06  168.629288  171.864620  168.276342  169.315567   96904000\n",
+       "2022-01-07  168.795959  170.727354  167.678301  169.501851   86709100"
       ]
      },
      "execution_count": 2,
@@ -244,10 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -259,18 +258,18 @@
    ],
    "source": [
     "# Créer l'instrument\n",
+    "from nautilus_trader.model.currencies import USD\n",
+    "\n",
     "instrument_id = InstrumentId(symbol=Symbol(SYMBOL), venue=Venue(\"NASDAQ\"))\n",
     "\n",
     "# Créer un instrument Equity simple\n",
-    "from nautilus_trader.model.currencies import USD  # Import ajouté\n",
-    "\n",
     "instrument = Equity(\n",
     "    instrument_id=instrument_id,\n",
     "    raw_symbol=Symbol(SYMBOL),\n",
-    "    currency=USD,                           # ✅ Objet USD\n",
+    "    currency=USD,  # Utiliser l'objet USD, pas la string\n",
     "    price_precision=2,\n",
     "    price_increment=Price.from_str(\"0.01\"),\n",
-    "    lot_size=Quantity.from_int(1),          # ✅ Seul ce paramètre est nécessaire\n",
+    "    lot_size=Quantity.from_int(1),  # Taille minimale de lot (1 action)\n",
     "    ts_event=0,\n",
     "    ts_init=0,\n",
     ")\n",
@@ -280,25 +279,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 Type de barre: AAPL.NASDAQ-1-DAY-LAST-EXTERNAL\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'lower'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Préparer le DataFrame au format attendu\u001b[39;00m\n\u001b[32m      9\u001b[39m df_processed = df.copy()\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m df_processed.columns = [\u001b[43mcol\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlower\u001b[49m() \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m df_processed.columns]\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Convertir en barres Nautilus\u001b[39;00m\n\u001b[32m     13\u001b[39m bars = wrangler.process(df_processed)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'tuple' object has no attribute 'lower'"
+      "📊 Type de barre: AAPL.NASDAQ-1-DAY-LAST-EXTERNAL\n",
+      "✅ 501 barres converties au format Nautilus\n"
      ]
     }
    ],
@@ -312,6 +301,13 @@
     "\n",
     "# Préparer le DataFrame au format attendu\n",
     "df_processed = df.copy()\n",
+    "\n",
+    "# Gérer les colonnes multi-index de yfinance\n",
+    "if isinstance(df_processed.columns, pd.MultiIndex):\n",
+    "    # Aplatir les colonnes multi-index en prenant le premier niveau\n",
+    "    df_processed.columns = df_processed.columns.get_level_values(0)\n",
+    "\n",
+    "# Convertir les noms de colonnes en minuscules\n",
     "df_processed.columns = [col.lower() for col in df_processed.columns]\n",
     "\n",
     "# Convertir en barres Nautilus\n",
@@ -321,9 +317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Données écrites dans le catalogue\n",
+      "\n",
+      "📋 Instruments dans le catalogue:\n",
+      "[Equity(id=AAPL.NASDAQ, raw_symbol=AAPL, asset_class=EQUITY, instrument_class=SPOT, quote_currency=USD, is_inverse=False, price_precision=2, price_increment=0.01, size_precision=0, size_increment=1, multiplier=1, lot_size=1, margin_init=0, margin_maint=0, maker_fee=0, taker_fee=0, info=None)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Écrire dans le catalogue\n",
     "catalog.write_data([instrument])\n",
@@ -347,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../strategies/macd_strategy.py\n"
+      "Overwriting ../strategies/macd_strategy.py\n"
      ]
     }
    ],
@@ -474,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +491,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      3\u001b[39m sys.path.append(\u001b[33m'\u001b[39m\u001b[33m../strategies\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmacd_strategy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MACDStrategy, MACDStrategyConfig\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m✅ Stratégie importée\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      3\u001b[39m sys.path.append(\u001b[33m'\u001b[39m\u001b[33m../strategies\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmacd_strategy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MACDStrategy, MACDStrategyConfig\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m✅ Stratégie importée\u001b[39m\u001b[33m\"\u001b[39m)\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~\\Desktop\\nautilus\\notebooks\\../strategies\\macd_strategy.py:5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnautilus_trader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StrategyConfig\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnautilus_trader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Data\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnautilus_trader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mindicators\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmacd\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MovingAverageConvergenceDivergence\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnautilus_trader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Bar\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnautilus_trader\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01menums\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OrderSide, TimeInForce\n",
       "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'nautilus_trader.indicators.macd'"
      ]
@@ -735,6 +742,20 @@
     "- Documentez vos résultats\n",
     "- N'oubliez pas : les performances passées ne garantissent pas les résultats futurs !"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
